['transfer library' dialog] transfer to department: fixup for 'dark mode'; fixed department list option

--- a/frontend/src/components/customize-select/index.css
+++ b/frontend/src/components/customize-select/index.css
@@ -107,6 +107,15 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  color: #212529;
+}
+
+.seafile-customize-select .selected-option-delete .seafile-multicolor-icon {
+  color: #909090;
+}
+
+.seafile-customize-select .selected-option-delete .seafile-multicolor-icon:hover {
+  color: #666;
 }
 
 .seafile-customize-select .select-placeholder {
